@@ -10,6 +10,7 @@ build_requires:
   Test::More: 0
   Test::NoWarnings: 0
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog: 0.24
+  Test::Shared::Fixture::Wikibase::Datatype::Mediainfo::Commons::ImageOfHuman: 0.22
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
